objects/Transfer_Price_Product_Code__c.object
<CustomObject>
    <description>The purpose of that custom object is dedicated only for Case BU form for RMMG and it keeps the data of the products ordered in reference to the case. It consists of the quantity, prices, product code and keeos data introduced manually in Salesforce.</description>
    <fields>
        <fullName>Case_Business_Unit_Specifics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Business Unit Specifics</label>
        <referenceTo>Case_BU__c</referenceTo>
        <relationshipLabel>Transfer Price &amp; Product Code</relationshipLabel>
        <relationshipName>Transfer_Price_Product_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PCS__c</fullName>
        <inlineHelpText>How many products are included in the warranty claim</inlineHelpText>
        <label>PCS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <inlineHelpText>Product Code from OMS (Order Management system) for the product under warranty claim</inlineHelpText>
        <label>Product Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Price__c</fullName>
        <inlineHelpText>Transfer price of product from production unit to sales  unit.</inlineHelpText>
        <label>Transfer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Transfer Price &amp; Product Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TPPC-{00000}</displayFormat>
        <label>Claim Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfer Price &amp; Product Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>